--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -14,13 +14,17 @@
 
 @import "partials/helpers",
 
-		"partials/nav",
+		    "partials/nav",
 
         "partials/colors",
 
         "partials/typography",
 
+        "partials/font-awesome",
+
         "partials/header",
+
+        "partials/footer",
 
         "partials/nav",
 
