--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
               <a href="mailto:max@maxquattromani.com" title="{{ site.title }} eMail - opens in new tab"><span class="fa fa-envelope-square fa-2x"></span></a>
             </li>
             <li>
-              <a href="/sitemap.xml" title="sitemap"><i class="fa fa-sitemap fa-2x"></i></a>
+              <a href="{{ site.baseurl }}/sitemap.xml" title="sitemap"><i class="fa fa-sitemap fa-2x"></i></a>
             </li>
           </ul>
         </div>
