--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+    {% include contact/index.html %}
+
     <!-- Footer Component -->
     <footer role="contentinfo">
       <div class="container">
