--- a/_includes/patterns/lists/index.html
+++ b/_includes/patterns/lists/index.html
@@ -150,7 +150,7 @@
 
     <hr>
 
-    <h4>Vertical Lined - adds some visuals breaks between li's</h4>
+    <h4>Vertical Striped - adds some visuals breaks between li's</h4>
     <ul class="vertical striped">
         <li>Lorem</li>
         <li>Ipsum</li>
