--- a/css/scss/partials/forms.scss
+++ b/css/scss/partials/forms.scss
@@ -143,7 +143,7 @@
     }
 
     @include placeholder {
-      color: $text-light-grey;
+      color: $color-dark-grey;
       font-weight: 100;
     }
 
