structure cleanup / sections

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,9 +23,10 @@
   <![endif]-->
 
   <!-- Prerender Resume page -->
-  <link rel="prerender" href="{{ site.url }}/resume">
+  <!-- <link rel="prerender" href="{{ site.url }}/"> -->
 
   {% include twitter_card.html %}
+  {% include facebook_og.html %}
 </head>
 
 <body class="{{ page.class }}">
