--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,22 +13,22 @@
         {% else %}
         <li>
           {% endif %}
-          <a href="{{ nav.url }}" class="text-center">{{ nav.name }}</a>
+          <a href="{{ site.baseurl }}{{ nav.url }}" class="text-center">{{ nav.name }}</a>
           <ul class="hidden">
             {% for child_link in nav.child_links %}
             <li>
-              <a href="{{ nav.url }}{{ child_link.url }}">{{ child_link.name }}</a>
+              <a href="{{ site.baseurl }}{{ nav.url }}{{ child_link.url }}">{{ child_link.name }}</a>
             </li>
             {% endfor %}
           </ul>
         </li>
         {% elsif nav.name == page.parent %}
         <li class="active">
-          <a href="{{ nav.url }}" class="text-center">{{ nav.name }}</a>
+          <a href="{{ site.baseurl }}{{ nav.url }}" class="text-center">{{ nav.name }}</a>
         </li>
         {% else %}
         <li>
-          <a href="{{ nav.url }}" class="text-center">{{ nav.name }}</a>
+          <a href="{{ site.baseurl }}{{ nav.url }}" class="text-center">{{ nav.name }}</a>
         </li>
         {% endif %}
         {% endfor %}
