--- a/_layouts/styleguide.html
+++ b/_layouts/styleguide.html
@@ -2,7 +2,11 @@
   {% include header.html %}
   {% include nav.html %}
 
+  {% include content.html %}
+
     {{ content }}
+
+  {% include end_content.html %}
 
 	{% include footer.html %}
 {% include foot.html %}
