--- a/css/partials/nav.css
+++ b/css/partials/nav.css
@@ -7,8 +7,10 @@
 nav {
   position: relative;
   width: 100%;
+  border-bottom: 1px solid #fff;
   background: rgba(22, 145, 60, 0.9);
   text-transform: uppercase;
+  box-shadow: 0 6px 6px -6px #b3b3b3;
   z-index: 9;
 }
 .ie nav {
@@ -47,7 +49,13 @@ nav ul li {
   line-height: normal;
 }
 nav ul li.active, nav ul li:hover {
-  box-shadow: inset 0 -0.35em 0 0 rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);
+}
+.ie nav ul li.active, .ie nav ul li:hover {
+  background: transparent;
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#80FFFFFF, endColorstr=#80FFFFFF)";
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#80FFFFFF,endColorstr=#80FFFFFF);
+  zoom: 1;
 }
 nav ul li a {
   display: block;
@@ -57,7 +65,7 @@ nav ul li a {
   color: #fff;
 }
 nav ul li a:hover {
-  color: #fff;
+  color: #324453;
   text-decoration: none;
 }
 @media (max-width: 62.5em) {
