--- a/css/scss/partials/nav.scss
+++ b/css/scss/partials/nav.scss
@@ -8,8 +8,10 @@
     nav {
       position: relative;
       width: 100%;
+      border-bottom: 1px solid $color-white;
       @include rgba($color-primary-green, .9);
       text-transform: uppercase;
+      @include box-shadow(0 6px 6px -6px $color-dark-grey);
       z-index: 9;
 
       .container {
@@ -36,7 +38,7 @@
 
           &.active,
           &:hover {
-            @include box-shadow(inset 0 -.35em 0 0 rgba($color-white, .5));
+            @include rgba($color-white, $site-alpha);
           }
 
           a {
@@ -47,7 +49,7 @@
             color: $color-white;
 
             &:hover {
-              color: $color-white;
+              color: $text;
               text-decoration: none;
             }
           }
