privacy policy and gutter change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,13 @@
         <span class="small-body-text disclaimer">
           The material contained within this website is provided for educational and informational purposes only and is not intended as an accompaniment or replacement to medical advice. It should not be used to diagnose or treat any illness, metabolic disorder, disease or health problem. As with all information and materials related to health, exercise and diet, you must first consult your doctor, physician or health care provider before implementing changes into your lifestyle. You must also consult your doctor before using any supplement – especially if you are currently taking medication, have an existing medical condition or if you are pregnant.﻿﻿
         </span>
+
+        <hr>
+
+        <div class="text-center">
+          <a href="{{ site.baseurl }}/privacy">Privacy Policy</a>
+        </div>
+
       </div>
     </footer>
     <!-- ./Footer Component -->
