--- a/css/partials/modules.css
+++ b/css/partials/modules.css
@@ -50,6 +50,10 @@ hr.drama:after {
   height: 30px;
   background-image: radial-gradient(farthest-side at center top, #e6e6e6 0%, rgba(255, 255, 255, 0) 100%);
 }
+hr.green {
+  border-top: 1px solid #bde0c8;
+  border-bottom: 1px solid #e2f1e7;
+}
 
 hr.sandbox {
   margin: 1em 0;
