--- a/_includes/pricing/index.html
+++ b/_includes/pricing/index.html
@@ -5,51 +5,76 @@
     <h2>Pricing</h2>
     <div class="row">
       <div class="third">
-        <div class="box-column">
-        <h3>Tier 1</h3>
-          <ul class="vertical lined">
-            <li>lorem</li>
-            <li>borem</li>
-            <li>forem</li>
-          </ul>
-          <div class="text-center">
-            <button class="btn btn-primary" type="submit" name="submit" value="submit">
-              <span>Sign-Up</span>
-            </button>
-          </div>
+        <div class="pricing-module">
+	      <header>
+		    <h3>Tier 1</h3>
+	      </header>
+          
+          <section>
+		  	<ul class="vertical lined">
+              <li><span class="left">lorem</span><span class="right">$100</span></li>
+			  <li><span class="left">borem</span><span class="right">$150</span></li>
+			  <li><span class="left">forem</span><span class="right">$300</span></li>
+          	</ul>
+          </section>
+          <footer>
+	          <div class="text-center">
+	            <button class="btn btn-primary full" type="submit" name="submit" value="submit">
+	              <span>Sign-Up</span>
+	            </button>
+	          </div>
+          </footer>
         </div>
       </div>
       <div class="third">
-        <div class="box-column">
-          <h3>Tier 2</h3>
-          <ul class="vertical lined">
-            <li>lorem</li>
-            <li>borem</li>
-            <li>forem</li>
-          </ul>
-          <div class="text-center">
-            <button class="btn btn-primary" type="submit" name="submit" value="submit">
-              <span>Sign-Up</span>
-            </button>
-          </div>
+        <div class="pricing-module">
+	      <header>
+		    <h3>Tier 2</h3>
+	      </header>
+          
+          <section>
+		  	<ul class="vertical lined">
+              <li><span class="left">lorem</span><span class="right">$100</span></li>
+			  <li><span class="left">borem</span><span class="right">$150</span></li>
+			  <li><span class="left">forem</span><span class="right">$300</span></li>
+          	</ul>
+          </section>
+          <footer>
+	          <div class="text-center">
+	            <button class="btn btn-primary full" type="submit" name="submit" value="submit">
+	              <span>Sign-Up</span>
+	            </button>
+	          </div>
+          </footer>
         </div>
       </div>
       <div class="third">
-        <div class="box-column">
-          <h3>Tier 3</h3>
-          <ul class="vertical lined">
-            <li>lorem</li>
-            <li>borem</li>
-            <li>forem</li>
-          </ul>
-          <div class="text-center">
-            <button class="btn btn-primary" type="submit" name="submit" value="submit">
-              <span>Sign-Up</span>
-            </button>
-          </div>
+        <div class="pricing-module">
+	      <header>
+		    <h3>Tier 3</h3>
+	      </header>
+          
+          <section>
+		  	<ul class="vertical lined">
+              <li><span class="left">lorem</span><span class="right">$100</span></li>
+			  <li><span class="left">borem</span><span class="right">$150</span></li>
+			  <li><span class="left">forem</span><span class="right">$300</span></li>
+          	</ul>
+          </section>
+          <footer>
+	          <div class="text-center">
+	            <button class="btn btn-primary full" type="submit" name="submit" value="submit">
+	              <span>Sign-Up</span>
+	            </button>
+	          </div>
+          </footer>
         </div>
       </div>
     </div>
+    
+    <hr>
+    
+    <p class="lede text-center">Please email me for all other services, including but not limited to, Personalized Boot Camps and Personal Training Packages.</p>
   </section>
 
   {% include end_content.html %}
