--- a/css/main.css
+++ b/css/main.css
@@ -3284,8 +3284,11 @@ footer {
 /* ==========================================================================
     Sections -- Version: 0.4.1- Compiled: timestamp()
     ========================================================================== */
+.about {
+  padding: 50px 0; }
+
 .services {
-  padding: 0;
+  padding: 50px 0;
   background: rgba(161, 211, 177, 0.5); }
   .ie .services {
     background: transparent;
@@ -3294,9 +3297,10 @@ footer {
     zoom: 1; }
 
 .pricing {
-  padding: 0; }
+  padding: 50px 0; }
 
 .contact {
+  padding: 50px 0;
   background-color: #324453;
   color: #fff;
   font-weight: 400; }
