--- a/css/partials/sections.css
+++ b/css/partials/sections.css
@@ -4,8 +4,12 @@
 /* ==========================================================================
     Sections -- Version: 0.4.1- Compiled: timestamp()
     ========================================================================== */
+.about {
+  padding: 50px 0;
+}
+
 .services {
-  padding: 0;
+  padding: 50px 0;
   background: rgba(161, 211, 177, 0.5);
 }
 .ie .services {
@@ -16,10 +20,11 @@
 }
 
 .pricing {
-  padding: 0;
+  padding: 50px 0;
 }
 
 .contact {
+  padding: 50px 0;
   background-color: #324453;
   color: #fff;
   font-weight: 400;
