--- a/_includes/pricing/index.html
+++ b/_includes/pricing/index.html
@@ -19,7 +19,7 @@
           </section>
           <footer>
 	          <div class="text-center">
-	            <button class="btn btn-primary full" type="submit" name="submit" value="submit">
+	            <button class="cta full" type="submit" name="submit" value="submit">
 	              <span>Sign-Up</span>
 	            </button>
 	          </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="third">
-        <div class="pricing-module">
+        <div class="pricing-module preferred">
 	      <header>
 		    <h3>Tier 2</h3>
 	      </header>
@@ -63,7 +63,7 @@
           </section>
           <footer>
 	          <div class="text-center">
-	            <button class="btn btn-primary full" type="submit" name="submit" value="submit">
+	            <button class="cta full" type="submit" name="submit" value="submit">
 	              <span>Sign-Up</span>
 	            </button>
 	          </div>
