--- a/css/partials/overrides.css
+++ b/css/partials/overrides.css
@@ -25,9 +25,18 @@
 .pricing-module header {
   padding: 1em;
   border-radius: 5px 5px 0 0;
-  background-color: #324453;
+  background-color: rgba(50, 68, 83, 0.7);
   color: #fff;
   text-align: center;
+}
+.pricing-module.preferred header {
+  background: #324453;
+}
+.ie .pricing-module.preferred header {
+  background: transparent;
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FF324453, endColorstr=#FF324453)";
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FF324453,endColorstr=#FF324453);
+  zoom: 1;
 }
 .pricing-module section {
   padding: 1em;
