--- a/_includes/pricing/index.html
+++ b/_includes/pricing/index.html
@@ -29,7 +29,7 @@
       <div class="third">
         <div class="pricing-module preferred">
 	      <header>
-		    <h3>Tier 2</h3>
+		    <h3>Tier 2 <span class="fa fa-star"></span></h3>
 	      </header>
           
           <section>
